<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dropdown_item_background"
        android:padding="16dp"
        android:text="@string/option1"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dropdown_item_background"
        android:padding="16dp"
        android:text="@string/option2"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dropdown_item_background"
        android:padding="16dp"
        android:text="@string/option3"
        android:textColor="#000000" />

</LinearLayout>



