<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EADDCF">

    <!-- Top Navigation Bar -->

    <TextView
        android:id="@+id/do_not_have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:gravity="center_vertical"
        android:text="@string/do_not_have"
        android:textAppearance="@style/do_not_have"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_signup" />

    <RelativeLayout
        android:id="@+id/top_navigat"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="#EADDCF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </RelativeLayout>

    <!-- Title TextView -->
    <TextView
        android:id="@+id/title"
        android:layout_width="247dp"
        android:layout_height="32dp"
        android:text="@string/title_login"
        android:textAppearance="@style/title_login"
        android:textStyle="bold"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <RelativeLayout
        android:id="@+id/magicons_gl"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp">

        <ImageView
            android:id="@+id/backButtonIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back_arrow"
            android:scaleType="centerInside"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/input_field_username"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <!-- EditText for username input -->
        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@null"
            android:hint="@string/placeholder_username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="#91919F"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/input_field_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <!-- EditText for password input -->

        <ToggleButton
            android:id="@+id/showPasswordButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_eye"
            android:padding="8dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#000000"
            android:textOff=""
            android:textOn=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/passwordEditText" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/placeholder_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="#91919F"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_signup"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="336dp"
        android:background="@drawable/button_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/use_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:text="@string/use_pin_ins"
        android:textAppearance="@style/use_pin_ins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_signup" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:gravity="center_vertical"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_signup" />

    <TextView
        android:id="@+id/pin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:text="@string/pin"
        android:textAppearance="@style/pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toEndOf="@id/use_pin"
        app:layout_constraintTop_toBottomOf="@id/button_signup" />

    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:gravity="center_vertical"
        android:text="@string/pass"
        android:textAppearance="@style/pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toEndOf="@id/forgot_pass"
        app:layout_constraintTop_toBottomOf="@id/button_signup" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:gravity="center_vertical"
        android:text="@string/signup"
        android:textAppearance="@style/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toEndOf="@id/do_not_have"
        app:layout_constraintTop_toBottomOf="@id/button_signup" />


</androidx.constraintlayout.widget.ConstraintLayout>