<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forgot_password_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/let_s_setup"
        android:layout_width="343dp"
        android:layout_height="88dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="76dp"
        android:gravity="top"
        android:text="@string/let_s_setup_bud"
        android:textAppearance="@style/let_s_setup_bud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/this_is_the"
        android:layout_width="344dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="204dp"
        android:gravity="top"
        android:lineSpacingExtra="1sp"
        android:text="@string/this_is_the"
        android:textAppearance="@style/this_is_the"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/button_continue_b"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="656dp"
        android:background="@drawable/button_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/continue_"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>