<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgot_password_screen1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EADDCF">

    <!-- Top Navigation Bar -->

    <RelativeLayout
        android:id="@+id/top_navigat"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="#EADDCF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </RelativeLayout>

    <!-- Title TextView -->
    <TextView
        android:id="@+id/title_forgot_pass"
        android:layout_width="247dp"
        android:layout_height="32dp"
        android:text="@string/title_forgot_password"
        android:textAppearance="@style/title"
        android:textStyle="bold"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <RelativeLayout
        android:id="@+id/magicons_gl"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp">

        <ImageView
            android:id="@+id/backButtonIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back_arrow"
            android:scaleType="centerInside"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/button_continue_fp"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="644dp"
        android:background="@drawable/button_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/continue_"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/enter_your_text"
        android:layout_width="280dp"
        android:layout_height="81dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="376dp"
        android:text="@string/your_email_"
        android:textAppearance="@style/your_email_"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_forgot_pass" />

    <ImageView
        android:id="@+id/paper_plane"
        android:layout_width="163dp"
        android:layout_height="173dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/paper_plane"
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="176dp" />

    <TextView
        android:id="@+id/check_your_"
        android:layout_width="328dp"
        android:layout_height="57dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/check_your_"
        android:textAppearance="@style/check_your_"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="470dp" />

</androidx.constraintlayout.widget.ConstraintLayout>