<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <RelativeLayout
        android:id="@+id/top_navigat_skin"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="4dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </RelativeLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="247dp"
        android:layout_height="48dp"
        android:text="@string/about"
        android:textAppearance="@style/title_detail_budget"
        android:textStyle="bold"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <RelativeLayout
        android:id="@+id/magicons_gl"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp">

        <ImageView
            android:id="@+id/backButtonIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back_arrow" />

    </RelativeLayout>

    <TextView
        android:id="@+id/title_splurgesavvy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="132dp"
        android:text="@string/splurge_savvy"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_splurgesavvy_desc"
        android:layout_width="373dp"
        android:layout_height="265dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/splurge_savvy_desc"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_splurgesavvy" />


</androidx.constraintlayout.widget.ConstraintLayout>